TP_DEVOPS/TP4-wik-dps/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo-pod
  labels:
    app: echo-app
spec:
  containers:
  - name: echo-container
    image: registry.cluster.wik.cloud/public/echo
